src/objects/Internal_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Dislike__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dislike</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ideas_That_Work__c</fullName>
        <label>Ideas That Work</label>
        <referenceTo>Ideas_That_Work__c</referenceTo>
        <relationshipLabel>Internal Comments</relationshipLabel>
        <relationshipName>Internal_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Like__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Like</label>
        <type>Checkbox</type>
    </fields>
    <label>Internal Comments</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Internal Comments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>